--- a/webproject/project.html
+++ b/webproject/project.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  
+  <title>
+ Ishika Srivastava
+  </title>
 </head>
 <body>
     <h1>Ishika Srivastava</h1>
@@ -35,7 +37,7 @@
 <figure>
   <img src="http://www.intro-webdesign.com/images/newlogo.png" width="325"  height="128" alt="">
   <figcaption>This page was created by Ishika Srivastava & Colleen van Lent. To learn more about web design, visit</figcaption>
-  <a href="http://www.intro-webdesign.com">Intro to Web Design</a>
 </figure>
+  <a href="http://www.intro-webdesign.com">Intro to Web Design</a>
 </body>
 </html>
